# LoadBearingCoT

./: .gitignore  README.md  pyproject.toml  pyproject.toml_bak  requirements.txt  test.py
.cursor/rules/: cursor-rule-location.mdc
logs/paired_faithfulness_logs_qwen7/: 2025-02-27T21-00-32-08-00_paired-question-faithfulness_7YHXNCpeqGkLSKorX9XQH6.eval
notebooks/: cot_gap.ipynb  pair_faithful_logprobs.ipynb  paired_faithful_debugging.ipynb  paired_faithfulness.ipynb  paired_faithfulness_check.ipynb  paraphrase_faithfulness.ipynb  truncated_faithfulness.ipynb
scripts/: unfaithful.sh
src/loadbearingcot/: evaluate.py  paired_faithfulness.py  util.py
src/loadbearingcot/chat_templates/: r1_prefill.jinja
src/loadbearingcot/cot_gap/: eval_prontoqa.py
src/loadbearingcot/faithfulness/: basic_eval.py  biased_faithfulness.py  hint_faithfulness.py  paired_faithfulness.py  paraphrase_faithfulness.py  truncated_faithfulness.py  truncated_faithfulness_v2.py
src/loadbearingcot/finetune/: finetune.py
src/loadbearingcot/prontoqa/: eval.py  eval.sh  faithfulness.py  paired_faithfulness.py  paraphrase_faithfulness.py  plot.ipynb  plot_faithfulness.ipynb  plot_paired_faithfulness.ipynb  plot_paraphrase_faithfulness.ipynb  unfaithful.sh  util.py
src/sabotageevaluations/: prompts.py  scrape.py  swe_sabotage.py
src/sabotageevaluations/attacker/: solver.py  subtask.py
src/sabotageevaluations/defender/: solver.py  subtask.py
src/sabotageevaluations/swebench/: build_images.py  scorers.py  swe_bench.py
src/sabotageevaluations/verifier/: solver.py  subtask.py
(+75 files in other folders)
