[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sabotageevaluations"
version = "0.0.1"
description = "Evaluating LLMs for sabotage capability"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = []
authors = [{ name = "Kai Fronsdal", email = "kaifronsdal@gmail.com" }]
classifiers = [
    "Topic :: LLM Evaluations :: Safety",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = ["inspect_ai==0.3.56", "swebench>=2.1.0", "docker", "anthropic", "openai", "google-generativeai"]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Source" = "https://github.com/pypa/sampleproject/"
