[project]
name = "loadbearingcot"
version = "0.0.1"
description = "Evaluating CoT for load bearing"
readme = "README.md"
authors = [{ name = "Kai Fronsdal", email = "kaifronsdal@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "datasets>=3.3.2",
    "google-generativeai>=0.8.4",
    "inspect-ai>=0.3.71",
    "matplotlib>=3.10.1",
    "openai>=1.65.2",
    "vllm>=0.7.3",
    "ipykernel",
    "seaborn",
    "trl>=0.15.2",
    "peft>=0.14.0",
    "setuptools>=78.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
inspect-ai = { path = "../inspect_ai" }
